CVS_SILENT made messages

--- a/languages/cpp/pcsimporter/customimporter/kdevcustomimporter.desktop
+++ b/languages/cpp/pcsimporter/customimporter/kdevcustomimporter.desktop
@@ -1,16 +1,26 @@
 [Desktop Entry]
 Type=Service
 Name=KDevCustomImporter
-Name[de]=KDevCustomImportierer
+Name[de]=PCS-Import (KDevelop)
 Name[sv]=KDevelop egen import
+Name[xx]=xxKDevCustomImporterxx
 Comment=KDevelop Custom Directory PCS Importer
+Comment[ca]=Importador PCS de directori personalitzat per a KDevelop
 Comment[da]=KDevelop selvindrette mappe-PCS-importr
-Comment[de]=KDevelop benutzerdefinierter PCS-Verzeichnisimportierer
+Comment[de]=Import für persistenten Klassenspeicher aus benutzerdefinierten Ordnern
 Comment[es]=Importador de PCS de directorio personalizado de KDevelop
+Comment[et]=KDevelopi kohandatud kataloogi PCS importija
+Comment[fr]=Un module externe pour l'importation PCS de dossier personnalisé.
 Comment[hu]=KDevelop egyéni könyvtár PCS-importáló
+Comment[it]=Directory per l'importatore personalizzato PCS di KDevelop
+Comment[nl]=KDevelop PCS Importer voor eigen directories
+Comment[pt]=Importador de PCS com Directoria Personalizada do KDevelop
 Comment[pt_BR]=Importador de Diretório PCS Personalizado para o KDevelop
+Comment[ru]=Загрузка символов из любого каталога в хранилище классов
 Comment[sr]=KDevelop-ов PCS увозник прилагођеног директоријума
 Comment[sv]=KDevelop PCS-import för egen katalog
+Comment[xx]=xxKDevelop Custom Directory PCS Importerxx
+Comment[zh_CN]=KDevelop自定义目录的PCS导入器
 Icon=gear
 ServiceTypes=KDevelop/PCSImporter
 X-KDE-Library=libkdevcustomimporter
