--- a/parts/fileview/kdevfileview.desktop
+++ b/parts/fileview/kdevfileview.desktop
@@ -3,27 +3,43 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Provides a way of navigating and interacting with the source files of the current project.
-Comment[da]=Sørger for en måde at navigere og interagere med kildefiler for det aktuelle projekt.
-Comment[de]=Stellt einen Weg zur Navigation und Interaktion mit den Quellcodedateien des aktuellen Projektes bereit.
+Comment[ca]=Proporciona un mètode de navegació i interacció amb els fitxers de codi font del projecte actual.
+Comment[da]=Sørger for en måde at navigere og interagere med kildefiler for dette projekt.
+Comment[de]=Bietet Funktionalität zur Navigation und zum Umgang mit den Quelltexten des aktuellen Projektes.
 Comment[es]=Proporciona un método de navegación e interacción con los archivos de código fuente del proyecto actual.
+Comment[et]=Võimaldab aktiivse projekti lähtekoodifailide vahel liikuda ja neis üht-teist ette võtta.
+Comment[fr]=Un module externe pour la gestion des arborescences de fichiers qui permet de naviguer et d'interagir avec les fichiers du projet actuel.
 Comment[hu]=Lehetővé teszi az aktuális projekthez tartozó forrásfájlok áttekintését, kezelését
+Comment[it]=Offre una via per navigare e interagire con il file sorgente del progetto attuale.
+Comment[nl]=Handig bladeren en zoeken in de broncode-bestanden van het huidige project.
+Comment[pt]=Oferece uma forma de navegar e de interagir com os ficheiros de código do projecto actual.
 Comment[pt_BR]=Fornece uma maneira de navegar e interagir com arquivos fonte do projeto atual.
-Comment[sr]=Обезбеђује начин навигације и рада са фајловима изворног кода текућег пројекта.
+Comment[ru]=Предоставляет способ навигации и взаимодействия с исходными файлами в каталоге текущего проекта.
+Comment[sr]=Обезбеђује начин навигације и рада са фајловима изворног кôда текућег пројекта.
 Comment[sv]=Erbjuder ett sätt att navigera och arbeta med källkodsfilerna i det aktuella projektet.
+Comment[xx]=xxProvides a way of navigating and interacting with the source files of the current project.xx
+Comment[zh_CN]=提供当前项目源文件的浏览和相互关系。
 Name=KDevFileView
-Name[de]=KDevDateiAnsicht
+Name[de]=Dateibaum (KDevelop)
 Name[sv]=KDevelop filvisning
 Name[xx]=xxKDevFileViewxx
 GenericName=File Tree
+GenericName[ca]=Arbre de fitxers
 GenericName[da]=Filtræ
 GenericName[de]=Dateibaum
 GenericName[es]=Árbol de archivos
+GenericName[et]=Failipuu
+GenericName[fr]=Arborescences de fichiers
 GenericName[hu]=fájl-fa
+GenericName[it]=Albero file
+GenericName[nl]=Bestandsboomstructuur
 GenericName[pt]=Árvore de Ficheiros
 GenericName[pt_BR]=Árvore de Arquivo
+GenericName[ru]=Дерево файлов
 GenericName[sr]=Дрво фајлова
 GenericName[sv]=Filträd
 GenericName[xx]=xxFile Treexx
+GenericName[zh_CN]=文件树
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevfileview
 X-KDevelop-Version=1
