--- a/vcs/perforce/kdevperforce.desktop
+++ b/vcs/perforce/kdevperforce.desktop
@@ -3,27 +3,43 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Integrates Perforce, a software configuration management system. http://www.perforce.com/
+Comment[ca]=Integra Perforce, un sistema de gestió de la configuració del programari. http://www.perforce.com/
 Comment[da]=Integrerer Perforce, et software-indstilling håndteringssystem. http://www.perforce.com/
-Comment[de]=Integriert Perforce, ein Softwarekonfigurationsverwaltungsssystem. http://www.perforce.com/
+Comment[de]=Integration von Perforce, einem System zur Verwaltung von Software-Konfigurationen. http://www.perforce.com/
 Comment[es]=Integra Perforce, un sistema de adminsitración de la configuración del software. http://www.perforce.com/
+Comment[et]=Integreerib tarkvaraseadistuste haldamise süsteemi Perforce. http://www.perforce.com/
+Comment[fr]=Un module externe qui gère le programme « PerForce » pour la gestion des versions du code source (similaire à CVS). http:/www.perforce.com/
 Comment[hu]=Integrációt biztosít a Perforce szoftverkonfigurációs rendszerrel - http://www.perforce.com/
+Comment[it]=Integra Perforce, un sistema per la configurazione software. http://www.perforce.com/
+Comment[nl]=Integreert Perforce, een systeem voor softwareconfiguratie. Zie http://www.perforce.com/
+Comment[pt]=Integra o Perforce, um sistema de gestão de configurações de 'software'. http://www.perforce.com/
 Comment[pt_BR]=Integra o Perforce, um software de configuração e gerenciamento do sistema. http://www.perforce.com/
+Comment[ru]=Интегрирует Perforce, систему управления конфигурациями программного обеспечения. http://www.perforce.com/
 Comment[sr]=Интегрише perforce, систем за управљање подешавањем софтвера. http://www.perforce.com/
 Comment[sv]=Integrerar Perforce, ett konfigurationshanteringsverktyg för programvara. http://www.perforce.com/
+Comment[xx]=xxIntegrates Perforce, a software configuration management system. http://www.perforce.com/xx
+Comment[zh_CN]=集成Perforce，系统配置管理软件 http://www.perforce.com/
 Name=KDevPerforce
-Name[de]=KDevPerforce
+Name[de]=Perforce-Unterstützung (KDevelop)
 Name[sv]=KDevelop Perforce
 Name[xx]=xxKDevPerforcexx
 GenericName=Perforce Integration
+GenericName[ca]=Integració amb Perforce
 GenericName[da]=Perforce integration
-GenericName[de]=Perforce-Integration
+GenericName[de]=Perforce-Unterstützung
 GenericName[es]=Integración de Perforce
+GenericName[et]=Perforce'i põimimine
+GenericName[fr]=Intégration de « Perforce »
 GenericName[hu]=Perforce-integráció
+GenericName[it]=Integrazione di Perforce
+GenericName[nl]=Perforce-integratie
 GenericName[pt]=Integração com o Perforce
 GenericName[pt_BR]=Integração com o Perforce
+GenericName[ru]=Интеграция Perforce
 GenericName[sr]=Интеграција perforce-а
 GenericName[sv]=Integrering av Perforce
 GenericName[xx]=xxPerforce Integrationxx
+GenericName[zh_CN]=Perforce集成
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevperforce
 X-KDevelop-Version=1
