--- a/languages/fortran/compiler/pgioptions/kdevpghpfoptions.desktop
+++ b/languages/fortran/compiler/pgioptions/kdevpghpfoptions.desktop
@@ -3,17 +3,24 @@ Encoding=UTF-8
 Type=Service
 Exec=pghpf
 Comment=Portland Group High Performance Fortran compiler
+Comment[ca]=Compilador Fortran d'altes prestacions de Portland Group
 Comment[da]=Portland Group højydelses Fortran compiler
-Comment[de]=Hochperformanz-Fortrancompiler der Portland Gruppe
+Comment[de]=Portland Group High Performance Fortran-Compiler
 Comment[es]=Compilador de Fortran de alto rendimiento de Portland Group
+Comment[et]=Portland Groupi suure jõudlusega Fortrani kompilaator
+Comment[fr]=Compilateur Fortran hautes performances du Portland Group.
 Comment[hu]=Portland Group nagyteljesítményű Fortran fordítóprogram
+Comment[it]=Compilatore ad alte prestazioni per Fortran del Portland Group
+Comment[nl]=Portland Group High Performance Fortran-compiler
 Comment[pt]=Compilador Portland Group High Performance Fortran
 Comment[pt_BR]=Compilador Portland Group Alta Performance
-Comment[sr]=Fortran компајлер високих перформанси портланд групе
+Comment[ru]=Компилятор Portland Group High Performance Fortran
+Comment[sr]=Fortran компајлер високих перформанси Portland Group-а
 Comment[sv]=Portland gruppens högprestanda Fortran 77-kompilator
 Comment[xx]=xxPortland Group High Performance Fortran compilerxx
+Comment[zh_CN]=Portland Group高性能Fortran编译器
 Name=PghpfOptions
-Name[de]=PghpfOptionen
+Name[de]=Pghpf-Einstellungen (KDevelop)
 Name[sv]=Alternativ för pghpf
 Name[xx]=xxPghpfOptionsxx
 ServiceTypes=KDevelop/CompilerOptions
