--- a/lib/interfaces/kdevelopcreatefile.desktop
+++ b/lib/interfaces/kdevelopcreatefile.desktop
@@ -4,16 +4,22 @@ Type=ServiceType
 X-KDE-ServiceType=KDevelop/CreateFile
 X-KDE-Derived=KDevelop/Plugin
 Name=KDevelop Create File interface
+Name[ca]=Interfície de creació de fitxers per a KDevelop
 Name[da]=KDevelop opret filgrænseflade
-Name[de]=KDevelop-Dateierstellung-Schnittstelle
+Name[de]=Schnittstelle für Dateierzeugung (KDevelop)
 Name[es]=Interfaz de creación de archivos de KDevelop
+Name[et]=KDevelopi faili loomise liides
+Name[fr]=Interface de la boite de dialogue de création de fichier de KDE
 Name[hu]=KDevelop fájllétrehozási felület
 Name[it]=Interfaccia KDevelop per creare file
+Name[nl]=KDevelop Bestand aanmaken-interface
 Name[pt]=Interface de Criação de Ficheiro do KDevelop
 Name[pt_BR]=Interface para Criar Arquivo do KDevelop
+Name[ru]=Интерфейс средства создания файлов
 Name[sr]=KDevelop-ов интерфејс за прављење фајла
 Name[sv]=KDevelop gränssnitt för att skapa filer
 Name[xx]=xxKDevelop Create File interfacexx
+Name[zh_CN]=KDevelop文件创建接口
 
 # versioning - prevent DLL hell
 [PropertyDef::X-KDevelop-Version]
