Add ConfigWidgetProxy class for config widget demand load support.

--- a/lib/util/Makefile.am
+++ b/lib/util/Makefile.am
@@ -2,11 +2,11 @@ INCLUDES = -I$(top_srcdir)/lib/compat  -I$(top_srcdir)/lib/interfaces  -I$(top_s
 
 noinst_LTLIBRARIES = libkdevutil.la libkdevutillgpl.la
 
-libkdevutil_la_SOURCES = processwidget.cpp processlinemaker.cpp domutil.cpp splitter.cpp execcommand.cpp ksavealldialog.cpp filetemplate.cpp urlutil.cpp pathutil.cpp
+libkdevutil_la_SOURCES = processwidget.cpp processlinemaker.cpp domutil.cpp splitter.cpp execcommand.cpp ksavealldialog.cpp filetemplate.cpp urlutil.cpp pathutil.cpp configwidgetproxy.cpp
 
-libkdevutillgpl_la_SOURCES = processwidget.cpp processlinemaker.cpp splitter.cpp execcommand.cpp ksavealldialog.cpp urlutil.cpp
+libkdevutillgpl_la_SOURCES = processwidget.cpp processlinemaker.cpp splitter.cpp execcommand.cpp ksavealldialog.cpp urlutil.cpp configwidgetproxy.cpp
 
 METASOURCES = AUTO
 
 kdevelopincludedir = $(includedir)/kdevelop
-kdevelopinclude_HEADERS = domutil.h execcommand.h filetemplate.h ksavealldialog.h pathutil.h processlinemaker.h processwidget.h splitter.h urlutil.h
+kdevelopinclude_HEADERS = domutil.h execcommand.h filetemplate.h ksavealldialog.h pathutil.h processlinemaker.h processwidget.h splitter.h urlutil.h configwidgetproxy.h
