--- a/parts/appwizard/kdevappwizard.desktop
+++ b/parts/appwizard/kdevappwizard.desktop
@@ -29,7 +29,7 @@ GenericName[da]=Program-guide
 GenericName[de]=Anwendungs-Assistent
 GenericName[es]=Asistente de aplicaciones
 GenericName[et]=Rakenduse nõustaja
-GenericName[fr]=Création d'application
+GenericName[fr]=Assistant d'application
 GenericName[hu]=Alkalmazásvarázsló
 GenericName[it]=Wizard di applicazione
 GenericName[nl]=Applicatie-assistent
