--- a/parts/astyle/kdevpart_astyle.desktop
+++ b/parts/astyle/kdevpart_astyle.desktop
@@ -29,7 +29,7 @@ GenericName[da]=Kildekode-formaterer
 GenericName[de]=Quelltext-Formatierer
 GenericName[es]=Formateador de código fuente
 GenericName[et]=Lähtekoodi vormindaja
-GenericName[fr]=Formatage de code source
+GenericName[fr]=Formatage des sources
 GenericName[hu]=Forráskód-formázó
 GenericName[it]=Formattatore del codice sorgente
 GenericName[nl]=Broncode formatteren
