--- a/parts/doctreeview/kdevdoctreeview.desktop
+++ b/parts/doctreeview/kdevdoctreeview.desktop
@@ -30,7 +30,7 @@ GenericName[de]=Dokumentationsbaum
 GenericName[el]=Τεκμηρίωση
 GenericName[es]=Documentación
 GenericName[et]=Dokumentatsioon
-GenericName[fr]=Gestion de la documentation
+GenericName[fr]=Documentation
 GenericName[hu]=dokumentáció
 GenericName[it]=Documentazione
 GenericName[nl]=Documentatie
