--- a/languages/cpp/app_templates/kcmodule/module.desktop
+++ b/languages/cpp/app_templates/kcmodule/module.desktop
@@ -1,5 +1,18 @@
 [Desktop Entry]
 Encoding=UTF-8
+Exec=kcmshell $APPNAMELC$
+Icon=misc
+Type=Application
+
+X-KDE-ModuleType=Library
+X-KDE-Library=$APPNAMELC$
+X-KDE-HasReadOnlyMode=false
+X-KDE-ParentApp=kcontrol
+
+
+
+[Desktop Entry]
+Encoding=UTF-8
 Comment=$APPNAME$ - a kcontrol module
 Comment[ca]=$APPNAME$ - un mòdul de kcontrol
 Comment[da]=$APPNAME$ - et kcontrol-modul
@@ -17,7 +30,6 @@ Comment[sr]=$APPNAME$ — kcontrol модул
 Comment[sv]=$APPNAME$ - en modul i Inställningscentralen
 Comment[xx]=xx$APPNAME$ - a kcontrol modulexx
 Comment[zh_CN]=$APPNAME$ - 一个KDE控制中心模块
-Exec=kcmshell $APPNAMELC$
 Keywords=$APPNAME$,$APPNAMELC$
 Keywords[xx]=xx$APPNAME$,$APPNAMELC$xx
 Name=The $APPNAME$ applet
@@ -37,8 +49,6 @@ Name[sr]=$APPNAME$ аплет
 Name[sv]=Miniprogram $APPNAME$
 Name[xx]=xxThe $APPNAME$ appletxx
 Name[zh_CN]=$APPNAME$小程序
-Terminal=false
-Type=Application
-X-KDE-FactoryName=$APPNAME$
-X-KDE-Library=$APPNAMELC$
-X-KDE-ModuleType=Library
+
+
+Categories=Qt;KDE;X-KDE-settings-components
