--- a/languages/cpp/app_templates/kcmodule/src-Makefile.am
+++ b/languages/cpp/app_templates/kcmodule/src-Makefile.am
@@ -8,8 +8,9 @@ kcm_$APPNAMELC$_la_SOURCES = $APPNAMELC$.cpp
 kcm_$APPNAMELC$_la_LIBADD = $(LIB_KDEUI)
 kcm_$APPNAMELC$_la_LDFLAGS = -module -avoid-version $(all_libraries) -no-undefined
 
-$APPNAMELC$_DATA = $APPNAMELC$.desktop
-$APPNAMELC$dir = $(kde_appsdir)/Settings/$APPNAME$
+
+xdg_apps_DATA = $APPNAMELC$.desktop
+
 
 messages: rc.cpp
-	$(XGETTEXT) *.cpp -o $(podir)/$APPNAMELC$.pot
+	$(XGETTEXT) *.cpp -o $(podir)/kcm$APPNAMELC$.pot
