--- a/buildtools/Makefile.am
+++ b/buildtools/Makefile.am
@@ -1,3 +1,3 @@
 ## haskell is out!
 
-SUBDIRS = ada ant autotools custommakefiles generic pascal script qmake
+SUBDIRS = ada ant autotools custommakefiles generic pascal script qmake haskell
