--- a/languages/haskell/kdevhaskellsupport.desktop
+++ b/languages/haskell/kdevhaskellsupport.desktop
@@ -43,3 +43,4 @@ GenericName[zh_CN]=Haskell语言支持
 ServiceTypes=KDevelop/LanguageSupport
 X-KDE-Library=libkdevhaskellsupport
 X-KDevelop-Language=Haskell
+X-KDevelop-Version=1
