--- a/kdevelop.m4.in
+++ b/kdevelop.m4.in
@@ -420,7 +420,7 @@ AC_DEFUN(KDEV_CHECK_BDB,
 
     save_CXXFLAGS="$CXXFLAGS"
 
-    CXXFLAGS="$CXXFLAGS $X_CFLAGS -ldb"
+    CXXFLAGS="$CXXFLAGS -ldb"
 
     AC_TRY_LINK([
       #include <db.h>
@@ -482,9 +482,9 @@ AC_DEFUN(KDEV_CHECK_MDI,
     AC_LANG_SAVE
     AC_LANG_CPLUSPLUS
     save_CXXFLAGS="$CXXFLAGS"
-    CXXFLAGS="$KDE_INCLUDES"
+    CXXFLAGS="-I$ac_kde_includes"
 
-    AC_TRY_LINK([
+    AC_TRY_COMPILE([
       #include <kdeversion.h>
     ],
     [
@@ -532,9 +532,9 @@ AC_DEFUN(KDEV_CHECK_COMPAT,
 
     save_CXXFLAGS="$CXXFLAGS"
 
-    CXXFLAGS="$CXXFLAGS $QT_INCLUDES $KDE_INCLUDES $X_CFLAGS"
+    CXXFLAGS="$QT_INCLUDES $ac_kde_includes"
 
-    AC_TRY_LINK([
+    AC_TRY_COMPILE([
       #include <qglobal.h>
       #include <kdeversion.h>
     ],
@@ -580,9 +580,9 @@ AC_DEFUN(KDEV_CHECK_QEDITOR,
 
     save_CXXFLAGS="$CXXFLAGS"
 
-    CXXFLAGS="$CXXFLAGS $QT_INCLUDES $X_CFLAGS"
+    CXXFLAGS="$QT_INCLUDES"
 
-    AC_TRY_LINK([
+    AC_TRY_COMPILE([
       #include <qglobal.h>
     ],
     [
