--- a/parts/appwizard/common/wx-configure.in
+++ b/parts/appwizard/common/wx-configure.in
@@ -1,5 +1,5 @@
-AC_INIT(src/wxhello.cpp)
-AM_INIT_AUTOMAKE(wxhello, 0.1)
+AC_INIT(src/$APPNAMELC$.cpp)
+AM_INIT_AUTOMAKE($APPNAMELC$, 0.1)
 
 AC_PROG_CXX
 AC_PROG_INSTALL
