--- a/configure.in.in
+++ b/configure.in.in
@@ -1,6 +1,6 @@
 #MIN_CONFIG(3.0.0)
 
-AM_INIT_AUTOMAKE(kdevelop, 3.0.0)
+AM_INIT_AUTOMAKE(kdevelop, 3.0.90-CVS)
 KDE_NEED_FLEX
 
 KDEV_CHECK_DOCBASE
