Make the description more concise so the splashscreen doesn't draw outside its boundaries any more.

--- a/vcs/cvsservice/kdevcvsservice.desktop
+++ b/vcs/cvsservice/kdevcvsservice.desktop
@@ -17,6 +17,7 @@ Comment[pt_BR]=Integração com o CVS usando o cvsservice do Cervisia (precisa d
 Comment[ru]=Интеграция CVS с использованием Cervisia cvsservice (требует KDE 3.2). http://www.kde.org/apps/cervisia/
 Comment[sr]=Интеграција CVS-а користећи Cervisia-jин cvsservice (захтева KDE 3.2) http://www.kde.org/apps/cervisia/
 Comment[sv]=Integrering av CVS med användning av Cervisias CVS-tjänst (kräver KDE 3.2) http://www.kde.org/apps/cervisia/
+Comment[ta]=cvsservice (needs KDE 3.2) http://www.kde.org/apps/cervisia/ உபயோகித்து CVS ஒருங்கினைப்பு 
 Comment[xx]=xxCVS Integration using Cervisia's cvsservice (needs KDE 3.2) http://www.kde.org/apps/cervisia/xx
 Comment[zh_CN]=使用Cervisia的cvsservice的CVS集成(需要KDE 3.2) http://www.kde.org/apps/cervisia/
 Name=CvsService
@@ -25,8 +26,9 @@ Name[de]=CVSService-Unterstützung (KDevelop)
 Name[el]=Cvs υπηρεσία
 Name[sr]=CvsServicе
 Name[sv]=CVS-tjänst
+Name[ta]=Cvs சேவை
 Name[xx]=xxCvsServicexx
-GenericName=CVS Integration using Cervisia's cvsservice
+GenericName=CVS Integration (Cervisia)
 GenericName[ca]=Integració amb el CVS emprant el cvsservice de Cervisia
 GenericName[da]=CVS Integration ved brug af Cervisia's cvsservice
 GenericName[de]=CVSService-Unterstützung
@@ -41,6 +43,7 @@ GenericName[pt_BR]=Integração com o CVS usando o cvsservice do Cervisia
 GenericName[ru]=Интеграция CVS с использованием Cervisia cvsservice
 GenericName[sr]=Интеграција CVS-а користећи Cervisia-jин cvsservice
 GenericName[sv]=Integrering av CVS med Cervisiatjänst
+GenericName[ta]=Cervisia's cvsservice உபயோகித்து CVS ஒருங்கினைப்பு 
 GenericName[xx]=xxCVS Integration using Cervisia's cvsservicexx
 GenericName[zh_CN]=使用Cervisia's cvsservice的CVS集成
 Icon=kdev_cvs
