The new generic and extensible property editor library. It is (will be) used for generic project manager in KDevelop.

--- a/lib/widgets/propeditor/Makefile.am
+++ b/lib/widgets/propeditor/Makefile.am
@@ -1,9 +1,9 @@
 INCLUDES = -I$(top_srcdir)/lib/compat $(all_includes)
 METASOURCES = AUTO
 
-lib_LTLIBRARIES =  libpropertyeditor.la
-libpropertyeditor_la_LDFLAGS = $(all_libraries)
-libpropertyeditor_la_SOURCES = pcolorcombo.cpp pcombobox.cpp pfontcombo.cpp plineedit.cpp plinestyle.cpp property.cpp propertyeditor.cpp propertywidget.cpp pspinbox.cpp psymbolcombo.cpp propertyutils.cpp pdoublenuminput.cpp pcheckbox.cpp pstringlistedit.cpp
+lib_LTLIBRARIES =  libkdevpropertyeditor.la
+libkdevpropertyeditor_la_LDFLAGS = $(all_libraries)
+libkdevpropertyeditor_la_SOURCES = pcheckbox.cpp pdoublenuminput.cpp plineedit.cpp propertyeditor.cpp propertyoperator.cpp pstringlistedit.cpp pcolorcombo.cpp pdummywidget.cpp property.cpp propertylist.cpp propertywidget.cpp psymbolcombo.cpp pcombobox.cpp pfontcombo.cpp propertyaccessor.cpp propertymachinefactory.cpp pspinbox.cpp
 
-propeditorincludedir = $(includedir)/kdevelop
-propeditorinclude_HEADERS = pcolorcombo.h  pdoublenuminput.h  plineedit.h   property.h        propertyutils.h   pspinbox.h         psymbolcombo.h pcheckbox.h     pcombobox.h    pfontcombo.h       plinestyle.h  propertyeditor.h  propertywidget.h  pstringlistedit.h
+kdevpropeditorincludedir = $(includedir)/kdevelop/propeditor
+kdevpropeditorinclude_HEADERS = pcheckbox.h pdoublenuminput.h plineedit.h propertyeditor.h propertyoperator.h pstringlistedit.h pcolorcombo.h pdummywidget.h property.h propertylist.h propertywidget.h psymbolcombo.h pcombobox.h pfontcombo.h propertyaccessor.h propertymachinefactory.h pspinbox.h
