Added QuickOpenFunction ability - patch by "Ahn, Duk J." <adjj22@kornet.net>
Also, separated the common ui-logic into a common baseclass.

--- a/parts/quickopen/Makefile.am
+++ b/parts/quickopen/Makefile.am
@@ -4,7 +4,7 @@ kde_module_LTLIBRARIES = libkdevquickopen.la
 libkdevquickopen_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevquickopen_la_LIBADD = $(top_builddir)/lib/libkdevelop.la $(top_builddir)/lib/widgets/libwidgets.la
 
-libkdevquickopen_la_SOURCES = quickopen_part.cpp quickopenbase.ui quickopendialog.cpp quickopenclassdialog.cpp
+libkdevquickopen_la_SOURCES = quickopen_part.cpp quickopendialog.cpp quickopenclassdialog.cpp quickopenfunctionchooseform.cpp quickopenbase.ui quickopenfiledialog.cpp quickopenfiledialog.h quickopenfunctiondialog.cpp quickopenfunctiondialog.h
 
 METASOURCES = AUTO
 
@@ -13,4 +13,4 @@ service_DATA = kdevpart_quickopen.desktop
 
 rcdir = $(kde_datadir)/kdevquickopen
 rc_DATA = kdevpart_quickopen.rc
-noinst_HEADERS =  quickopendialog.h
+noinst_HEADERS = quickopendialog.h quickopenfunctionchooseform.h quickopendialog.h
