--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = lib parts languages buildtools editors vcs src pics doc mimetypes
+SUBDIRS = lib parts languages buildtools editors vcs src pics doc mimetypes embedded
 
 EXTRA_DIST = AUTHORS COPYING COPYING.LIB NEWS ChangeLog INSTALL README TODO HACKING HACKING.language admin configure.in.bot
 
